<resources>
    <string name="app_name">Poketto</string>
    <string name="intro_title_1">Your everyday wallet</string>
    <string name="intro_title_2">Pay your friends, pronto</string>
    <string name="intro_title_3">No volatility</string>
    <string name="intro_title_4">Easily send and receive</string>
    <string name="intro_title_5">Your phone is all you need</string>
    <string name="intro_1">Poketto is the simplest, most secure and near instant way to send money to friends and pay for your every day items.</string>
    <string name="intro_2">Poketto uses xDai for near instant transactions to an xDai address. Not sure what xDai is? We will try to explain.</string>
    <string name="intro_3">xDai is a cryptocurrency that is pegged to the US Dollar, with low transaction fees, and fast transaction times.</string>
    <string name="intro_4">These features make xDai the ideal choice to use for everyday transactions like retail stores or peer to peer transfers.</string>
    <string name="intro_5">Your wallet will be generated as soon as you press get started. You can also import an existing wallet on the settings.</string>
    <string name="get_started">Get Started</string>
    <string name="qr_code">QR code</string>
    <string name="balance">Balance</string>
    <string name="balance_value">&#8230; xDai</string>
    <string name="spent_today">Spent today</string>
    <string name="spent_today_value">0.00 xDai</string>
    <string name="request">Request</string>
    <string name="pay">Pay</string>
    <string name="receive_subtitle_request_modal">Receive xDai in your wallet.</string>
    <string name="address">0x4b2Cbe48C378CaD5A2145358440B25627F99E189</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="share">Share with others</string>
    <string name="settings">Settings</string>
    <string name="settings_join_title">Join the community</string>
    <string name="settings_help_title">Help us create the future of web</string>
    <string name="settings_backup">Backup</string>
    <string name="settings_seed">Import seed</string>
    <string name="settings_legal">Legal</string>
    <string name="done">Done</string>
    <string name="paste_seed">Paste here your seed key&#8230;</string>
    <string name="paste_from_clipboard">Paste from clipboard</string>
    <string name="scan_qr_code">Scan address from QR Code</string>
    <string name="no_address">No address on clipboard</string>
    <string name="to">To</string>
    <string name="from">From:</string>
    <string name="xDai">xDai</string>
    <string name="send_max_balance">Send max balance</string>
    <string name="send">Send</string>
    <string name="amount">0,00</string>
    <string name="receive_funds_button">Receive funds</string>
    <string name="receive_funds_description">Start receiving xDai transfers in your wallet</string>
    <string name="buy_xDai_button">Buy xDai</string>
    <string name="buy_xDai_description">*Carbon is responsible for handling purchases</string>
    <string name="exchange_dai">How to exchange Dai to xDai</string>
    <string name="just_sent">You\'ve just sent</string>
    <string name="sent">You\'ve sent</string>
    <string name="message">""</string>
    <string name="received">You\'ve received</string>
    <string name="share_payment">Share payment</string>
    <string name="send_new_payment">Send new payment</string>
    <string name="assign_address">Assign address to contact</string>
    <string name="reassign_address">Reassign address to contact</string>
    <string name="unknown">Unknown</string>
    <string name="scan_send_payment">Scan to send a payment</string>
    <string name="scan_send_payment_description">You can scan a QR code to send xDai to another wallet</string>
    <string name="search_contacts">Search Contacts</string>
    <string name="recent">Recent</string>
    <string name="popular">Popular</string>
    <string name="write_note">Write a public note</string>
</resources>
