<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    
    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_centerVertical="true"
            android:background="#D8D8D8" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/divider"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/success_checkmark"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:src="@drawable/success_checkmark"
                android:layout_gravity="center_vertical|center_horizontal"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="#111111"
                android:text="@string/sent"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="32dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="40sp"
                    android:textColor="#111111"
                    android:text=""/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="12sp"
                    android:textColor="#111111"
                    android:text="@string/xDai"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textColor="#111111"
                    android:text="@string/to"/>

            <ImageView
                    android:id="@+id/receiver_image"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/pay_unknown"/>

            <TextView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:textColor="#99111111"
                    android:text="@string/address"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

        <Button
                android:id="@+id/share_payment_button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:text="@string/share_payment"
                android:textColor="#111111"
                android:textAllCaps="false"
                android:drawableStart="@drawable/share_transaction"
                android:drawablePadding="12dp"
                android:gravity="center_vertical|center_horizontal"/>

        <Button
                android:id="@+id/assign_address_button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:textColor="#111111"
                android:text="@string/assign_address"
                android:textAllCaps="false"
                android:drawableStart="@drawable/assign_address"
                android:drawablePadding="12dp"
                android:gravity="center_vertical|center_horizontal"/>

        <Button
                android:id="@+id/send_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_horizontal|center_vertical"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="20dp"
                android:background="@mipmap/button_background"
                android:text="@string/done"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:textAllCaps="false"/>

    </LinearLayout>

</RelativeLayout>