<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/sent_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="#111111"
                android:text="@string/sent"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingBottom="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="40sp"
                    android:textColor="#111111"
                    android:text=""/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="12sp"
                    android:textColor="#111111"
                    android:text="@string/xDai"/>

        </LinearLayout>

        <android.support.text.emoji.widget.EmojiTextView
                android:visibility="gone"
                android:id="@+id/message_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="16dp"
                android:textAlignment="center"
                android:textSize="10sp"
                android:textColor="#111111"
                android:text="@string/notes"/>

        <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_centerVertical="true"
                android:background="#D8D8D8" />

        <TextView
                android:id="@+id/date_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="#111111"
                android:text=""/>

        <TextView
                android:id="@+id/hours_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textColor="#111111"
                android:text=""/>

        <View
                android:id="@+id/second_divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_centerVertical="true"
                android:background="#D8D8D8" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/recipient_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textColor="#111111"
                    android:text="@string/to"/>

            <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/receiver_image"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:scaleType="fitCenter"
                    app:riv_corner_radius="14dip"
                    android:src="@drawable/pay_unknown"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"/>

            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical">

                <TextView
                        android:id="@+id/name_text_view"
                        android:visibility="gone"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:textColor="#111111"
                        android:text="@string/address"/>

                <TextView
                        android:id="@+id/address_text_view"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:textColor="#99111111"
                        android:text="@string/address"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

        <Button
                android:id="@+id/share_payment_button"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:text="@string/share_payment"
                android:textColor="#111111"
                android:textAllCaps="false"
                android:drawableStart="@drawable/share_transaction"
                android:drawablePadding="12dp"
                android:gravity="center_vertical|center_horizontal"/>

        <Button
                android:id="@+id/send_new_payment_button"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:text="@string/send_new_payment"
                android:textColor="#111111"
                android:textAllCaps="false"
                android:drawableStart="@drawable/send_new_payment"
                android:drawablePadding="12dp"
                android:gravity="center_vertical|center_horizontal"/>

        <Button
                android:id="@+id/assign_address_button"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="25dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:textColor="#111111"
                android:text="@string/assign_address"
                android:textAllCaps="false"
                android:drawableStart="@drawable/assign_address"
                android:drawablePadding="12dp"
                android:gravity="center_vertical|center_horizontal"/>


    </LinearLayout>

</RelativeLayout>